linear and logistic regression

--- a/TensorFlowHomework.ipynb
+++ b/TensorFlowHomework.ipynb
@@ -25,10 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "sess=tf.Session()\n",
@@ -40,6 +38,8 @@
     "    sess.run(tf.global_variables_initializer())\n",
     "    val = tf.greater(a,b)\n",
     "    print(sess.run(val))\n",
+    "    print (a.eval(session=sess))\n",
+    "    print (b.eval(session=sess))\n",
     "    if val.eval(session=sess) is True:\n",
     "        print(\"0\")\n",
     "    else:\n",
@@ -48,15 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[False]\n",
-      "[-1.47849917]\n"
+      "[ True]\n",
+      "[ 1.14786029]\n",
+      "[-1.30699563]\n",
+      "[-0.15913534]\n"
      ]
     }
    ],
@@ -84,7 +86,8 @@
     "    var_mat = tf.Variable(tf.random_normal([16,16],mean=0.0,stddev=10.0, dtype=tf.float32))\n",
     "    det=tf.matrix_determinant(var_mat)\n",
     "    sess.run(tf.global_variables_initializer())\n",
-    "    print(sess.run(det))"
+    "    print(sess.run(det))\n",
+    "    print (var_mat.eval(session=sess))"
    ]
   },
   {
@@ -248,7 +251,9 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def add():\n",
