--- a/logistic Regression homework.ipynb
+++ b/logistic Regression homework.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic regression Homework"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -13,20 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully downloaded train-images-idx3-ubyte.gz 9912422 bytes.\n",
       "Extracting /tmp/data/train-images-idx3-ubyte.gz\n",
-      "Successfully downloaded train-labels-idx1-ubyte.gz 28881 bytes.\n",
       "Extracting /tmp/data/train-labels-idx1-ubyte.gz\n",
-      "Successfully downloaded t10k-images-idx3-ubyte.gz 1648877 bytes.\n",
       "Extracting /tmp/data/t10k-images-idx3-ubyte.gz\n",
-      "Successfully downloaded t10k-labels-idx1-ubyte.gz 4542 bytes.\n",
       "Extracting /tmp/data/t10k-labels-idx1-ubyte.gz\n"
      ]
     }
@@ -39,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -56,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -73,8 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Construct model\n",
@@ -82,20 +87,23 @@
     "pred = tf.nn.softmax(logits) # Softmax , this is logistic regression\n",
     "\n",
     "# Minimize error mean square error for linear regression\n",
-    "cost_linear = tf.reduce_mean(tf.square(logits-y))\n",
-    "cost_logistic = -tf.reduce_mean(tf.reduce_sum(y * tf.log(pred),reduction_indices=1))\n",
+    "#cost_linear = tf.reduce_mean(tf.reduce_sum(tf.square(logits-y),reduction_indices = 1))\n",
+    "#cost_logistic = tf.reduce_mean(-tf.reduce_sum(y*tf.log(pred), reduction_indices=1))\n",
+    "#cost_logistic = tf.reduce_mean(y*tf.log(pred)+ (1 -y) *tf.log(1 -pred))\n",
+    "\n",
     "# Gradient Descent\n",
-    "optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(cost)\n",
+    "#optimizer_linear = tf.train.GradientDescentOptimizer(learning_rate).minimize(cost_linear)\n",
+    "#optimizer_logistic = tf.train.GradientDescentOptimizer(learning_rate).minimize(cost_logistic)\n",
     "\n",
     "#cross entropy error\n",
-    "cost_entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=y))\n",
+    "cost_entropy_logistic = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=y))\n",
     "#adamoptimizer\n",
-    "adam_optimizer =  tf.train.AdamOptimizer(learning_rate).minimize(cost_entropy) "
+    "adam_optimizer =  tf.train.AdamOptimizer(learning_rate).minimize(cost_entropy_logistic) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -107,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -121,63 +129,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 cost= nan\n",
-      "0.08\n",
-      "Epoch: 0002 cost= 7.025090450\n",
-      "0.09\n",
-      "Epoch: 0003 cost= 6.179765488\n",
-      "0.13\n",
-      "Epoch: 0004 cost= 5.676055302\n",
-      "0.18\n",
-      "Epoch: 0005 cost= 5.335669588\n",
-      "0.16\n",
-      "Epoch: 0006 cost= 5.068365330\n",
-      "0.07\n",
-      "Epoch: 0007 cost= 4.861021263\n",
-      "0.13\n",
-      "Epoch: 0008 cost= 4.691743891\n",
-      "0.11\n",
-      "Epoch: 0009 cost= 4.549147815\n",
-      "0.19\n",
-      "Epoch: 0010 cost= 4.430806378\n",
-      "0.12\n",
-      "Epoch: 0011 cost= 4.325332464\n",
-      "0.16\n",
-      "Epoch: 0012 cost= 4.233226239\n",
-      "0.13\n",
-      "Epoch: 0013 cost= 4.156792546\n",
-      "0.16\n",
-      "Epoch: 0014 cost= 4.084349627\n",
-      "0.15\n",
-      "Epoch: 0015 cost= 4.020028942\n",
-      "0.19\n",
-      "Epoch: 0016 cost= 3.959164794\n",
-      "0.12\n",
-      "Epoch: 0017 cost= 3.908984354\n",
-      "0.11\n",
-      "Epoch: 0018 cost= 3.857201130\n",
-      "0.15\n",
-      "Epoch: 0019 cost= 3.814606505\n",
-      "0.17\n",
-      "Epoch: 0020 cost= 3.772237916\n",
-      "0.18\n",
-      "Epoch: 0021 cost= 3.733450068\n",
-      "0.23\n",
-      "Epoch: 0022 cost= 3.699947745\n",
-      "0.23\n",
-      "Epoch: 0023 cost= 3.664216642\n",
-      "0.1\n",
-      "Epoch: 0024 cost= 3.633758025\n",
-      "0.22\n",
-      "Epoch: 0025 cost= 3.603601191\n",
-      "0.28\n",
+      "Epoch: 0001 cost= 1.365872721\n",
+      "0.86\n",
+      "Epoch: 0002 cost= 0.504971894\n",
+      "0.95\n",
+      "Epoch: 0003 cost= 0.420738229\n",
+      "0.89\n",
+      "Epoch: 0004 cost= 0.380025582\n",
+      "0.88\n",
+      "Epoch: 0005 cost= 0.350921831\n",
+      "0.89\n",
+      "Epoch: 0006 cost= 0.335374467\n",
+      "0.9\n",
+      "Epoch: 0007 cost= 0.321175740\n",
+      "0.93\n",
+      "Epoch: 0008 cost= 0.311554394\n",
+      "0.91\n",
+      "Epoch: 0009 cost= 0.302158387\n",
+      "0.93\n",
+      "Epoch: 0010 cost= 0.297453092\n",
+      "0.92\n",
+      "Epoch: 0011 cost= 0.293138658\n",
+      "0.92\n",
+      "Epoch: 0012 cost= 0.287651137\n",
+      "0.94\n",
+      "Epoch: 0013 cost= 0.284300526\n",
+      "0.95\n",
+      "Epoch: 0014 cost= 0.282913188\n",
+      "0.92\n",
+      "Epoch: 0015 cost= 0.282241546\n",
+      "0.96\n",
+      "Epoch: 0016 cost= 0.278140646\n",
+      "0.95\n",
+      "Epoch: 0017 cost= 0.273857471\n",
+      "0.89\n",
+      "Epoch: 0018 cost= 0.273812922\n",
+      "0.93\n",
+      "Epoch: 0019 cost= 0.269502422\n",
+      "0.93\n",
+      "Epoch: 0020 cost= 0.269814051\n",
+      "0.92\n",
+      "Epoch: 0021 cost= 0.270686117\n",
+      "0.9\n",
+      "Epoch: 0022 cost= 0.267437561\n",
+      "0.9\n",
+      "Epoch: 0023 cost= 0.265754231\n",
+      "0.92\n",
+      "Epoch: 0024 cost= 0.264718629\n",
+      "0.96\n",
+      "Epoch: 0025 cost= 0.261563126\n",
+      "0.92\n",
       "Optimization Finished!\n"
      ]
     }
@@ -195,7 +203,7 @@
     "    for i in range(total_batch):\n",
     "        batch_xs, batch_ys = mnist.train.next_batch(batch_size)\n",
     "        # Run optimization op (backprop) and cost op (to get loss value)\n",
-    "        _, c = sess.run([optimizer, cost_logistic], feed_dict={x: batch_xs,\n",
+    "        _, c = sess.run([adam_optimizer, cost_entropy_logistic], feed_dict={x: batch_xs,\n",
     "                                                          y: batch_ys})\n",
     "        # Compute average loss\n",
     "        avg_cost += c / total_batch\n",
@@ -211,7 +219,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  3.67863465e-12   1.41567283e-19   4.67271534e-12   1.76580576e-03\n",
+      "   1.72750814e-09   2.95836230e-06   6.93046659e-18   9.98140454e-01\n",
+      "   3.61092788e-07   9.03862674e-05]\n"
+     ]
+    }
+   ],
+   "source": [
+    "prd = sess.run(pred,feed_dict = {x: mnist.test.images, y: mnist.test.labels})\n",
+    "print (prd[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -222,29 +250,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy on test set:  0.8294\n"
+      "accuracy on test set:  0.9156\n"
      ]
     }
    ],
    "source": [
     "print (\"accuracy on test set: \",acc1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
