--- a/logistic Regression homework.ipynb
+++ b/logistic Regression homework.ipynb
@@ -27,13 +27,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully downloaded train-images-idx3-ubyte.gz 9912422 bytes.\n",
       "Extracting /tmp/data/train-images-idx3-ubyte.gz\n",
-      "Successfully downloaded train-labels-idx1-ubyte.gz 28881 bytes.\n",
       "Extracting /tmp/data/train-labels-idx1-ubyte.gz\n",
-      "Successfully downloaded t10k-images-idx3-ubyte.gz 1648877 bytes.\n",
       "Extracting /tmp/data/t10k-images-idx3-ubyte.gz\n",
-      "Successfully downloaded t10k-labels-idx1-ubyte.gz 4542 bytes.\n",
       "Extracting /tmp/data/t10k-labels-idx1-ubyte.gz\n"
      ]
     }
@@ -46,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Parameters\n",
-    "learning_rate = 0.01\n",
+    "learning_rate = 0.1\n",
     "training_epochs = 25\n",
     "batch_size = 100\n",
     "display_step = 1\n",
@@ -107,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -119,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -133,63 +129,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 cost= 1.284835693\n",
-      "accuracy on train set: 0.84\n",
-      "Epoch: 0002 cost= 0.504008658\n",
-      "accuracy on train set: 0.9\n",
-      "Epoch: 0003 cost= 0.414448022\n",
-      "accuracy on train set: 0.84\n",
-      "Epoch: 0004 cost= 0.377333584\n",
-      "accuracy on train set: 0.92\n",
-      "Epoch: 0005 cost= 0.344597583\n",
-      "accuracy on train set: 0.92\n",
-      "Epoch: 0006 cost= 0.330752633\n",
-      "accuracy on train set: 0.95\n",
-      "Epoch: 0007 cost= 0.316849954\n",
-      "accuracy on train set: 0.94\n",
-      "Epoch: 0008 cost= 0.308452311\n",
-      "accuracy on train set: 0.9\n",
-      "Epoch: 0009 cost= 0.301307411\n",
-      "accuracy on train set: 0.93\n",
-      "Epoch: 0010 cost= 0.298733148\n",
-      "accuracy on train set: 0.89\n",
-      "Epoch: 0011 cost= 0.292719189\n",
-      "accuracy on train set: 0.92\n",
-      "Epoch: 0012 cost= 0.284617129\n",
+      "Epoch: 0001 cost= 1.303920882\n",
+      "accuracy on train set: 0.85\n",
+      "Epoch: 0002 cost= 0.501409304\n",
       "accuracy on train set: 0.97\n",
-      "Epoch: 0013 cost= 0.284422963\n",
+      "Epoch: 0003 cost= 0.415245739\n",
+      "accuracy on train set: 0.9\n",
+      "Epoch: 0004 cost= 0.373209509\n",
+      "accuracy on train set: 0.91\n",
+      "Epoch: 0005 cost= 0.346682127\n",
+      "accuracy on train set: 0.91\n",
+      "Epoch: 0006 cost= 0.329507550\n",
+      "accuracy on train set: 0.9\n",
+      "Epoch: 0007 cost= 0.319280063\n",
       "accuracy on train set: 0.89\n",
-      "Epoch: 0014 cost= 0.283981392\n",
+      "Epoch: 0008 cost= 0.307967568\n",
+      "accuracy on train set: 0.9\n",
+      "Epoch: 0009 cost= 0.300303710\n",
+      "accuracy on train set: 0.9\n",
+      "Epoch: 0010 cost= 0.294169749\n",
       "accuracy on train set: 0.93\n",
-      "Epoch: 0015 cost= 0.279180510\n",
-      "accuracy on train set: 0.87\n",
-      "Epoch: 0016 cost= 0.279299107\n",
-      "accuracy on train set: 0.93\n",
-      "Epoch: 0017 cost= 0.276331126\n",
-      "accuracy on train set: 0.88\n",
-      "Epoch: 0018 cost= 0.270916307\n",
-      "accuracy on train set: 0.92\n",
-      "Epoch: 0019 cost= 0.268284335\n",
-      "accuracy on train set: 0.95\n",
-      "Epoch: 0020 cost= 0.268001011\n",
-      "accuracy on train set: 0.95\n",
-      "Epoch: 0021 cost= 0.268701476\n",
-      "accuracy on train set: 0.95\n",
-      "Epoch: 0022 cost= 0.263774652\n",
-      "accuracy on train set: 0.95\n",
-      "Epoch: 0023 cost= 0.267814769\n",
+      "Epoch: 0011 cost= 0.290334253\n",
       "accuracy on train set: 0.94\n",
-      "Epoch: 0024 cost= 0.267712342\n",
-      "accuracy on train set: 0.94\n",
-      "Epoch: 0025 cost= 0.266371429\n",
+      "Epoch: 0012 cost= 0.287945015\n",
       "accuracy on train set: 0.97\n",
+      "Epoch: 0013 cost= 0.282388078\n",
+      "accuracy on train set: 0.86\n",
+      "Epoch: 0014 cost= 0.278901495\n",
+      "accuracy on train set: 0.94\n",
+      "Epoch: 0015 cost= 0.275058039\n",
+      "accuracy on train set: 0.93\n",
+      "Epoch: 0016 cost= 0.274489221\n",
+      "accuracy on train set: 0.93\n",
+      "Epoch: 0017 cost= 0.271614485\n",
+      "accuracy on train set: 0.9\n",
+      "Epoch: 0018 cost= 0.275063170\n",
+      "accuracy on train set: 0.9\n",
+      "Epoch: 0019 cost= 0.271907376\n",
+      "accuracy on train set: 0.94\n",
+      "Epoch: 0020 cost= 0.269641153\n",
+      "accuracy on train set: 0.94\n",
+      "Epoch: 0021 cost= 0.269920868\n",
+      "accuracy on train set: 0.94\n",
+      "Epoch: 0022 cost= 0.266555641\n",
+      "accuracy on train set: 0.92\n",
+      "Epoch: 0023 cost= 0.264100316\n",
+      "accuracy on train set: 0.91\n",
+      "Epoch: 0024 cost= 0.264686706\n",
+      "accuracy on train set: 0.91\n",
+      "Epoch: 0025 cost= 0.262799644\n",
+      "accuracy on train set: 0.91\n",
       "Optimization Finished!\n"
      ]
     }
@@ -223,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -234,20 +230,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy on test set:  0.9156\n"
+      "accuracy on test set:  0.9147\n"
      ]
     }
    ],
    "source": [
     "print (\"accuracy on test set: \",acc1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
